added functionality for builder robot during setup phase

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # What are you trying to run?
 
-teamA=examplefuncsplayer
-teamB=smartPlayer
+teamA=smartPlayer
+teamB=examplefuncsplayer
 maps=DefaultSmall
 
 # Some optional configurations you can adjust as you need
