--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 
 teamA=smartPlayer
 teamB=examplefuncsplayer
-maps=DefaultSmall
+maps=DefaultMedium
 
 # Some optional configurations you can adjust as you need
 
