--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,33 +1,60 @@
-name: CI
+name: Code Coverage
 
-on:
-  pull_request:
-    branches:
-      - kumari_1  # Change this to your default branch
+on: [pull_request]
 
 jobs:
-  build:
+  base_branch_cov:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up JDK 8
-        uses: actions/setup-java@v2
+      - uses: actions/checkout@v3
         with:
-          java-version: '8'
-          distribution: 'adopt'
-
-      - name: Install JavaFX
-        run: sudo apt-get install openjfx
-
-
-      - name: Build with Gradle
-        run: ./gradlew clean test jacocoTestReport
-
-      - name: Upload JaCoCo report
-        uses: actions/upload-artifact@v3  # Updated to use v3
+          ref: ${{ github.base_ref }}
+      - name: Use Node.js v20.9.0
+        uses: actions/setup-node@v3
         with:
-          name: jacoco-report
-          path: build/reports/jacoco/test/html  # Adjust if your path is different
+          node-version: v20.9.0
+
+      - name: Install dependencies
+        run: yarn
+
+      - name: Run test coverage
+        run: yarn coverage
+
+      - name: Upload code coverage for ref branch
+        uses: actions/upload-artifact@v3
+        with:
+          name: ref-lcov.info
+          path: ./coverage/lcov.info
+
+  checks:
+    runs-on: ubuntu-latest
+    needs: base_branch_cov
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js v20.9.0
+        uses: actions/setup-node@v3
+        with:
+          node-version: v20.9.0
+
+      - name: Download code coverage report from base branch
+        uses: actions/download-artifact@v3
+        with:
+          name: ref-lcov.info
+
+      - name: Install dependencies
+        run: yarn
+
+      - name: Run test coverage
+        run: yarn coverage
+
+      #  Compares two code coverage files and generates report as a comment
+      - name: Generate Code Coverage report
+        id: code-coverage
+        uses: barecheck/code-coverage-action@v1
+        with:
+          barecheck-github-app-token: ${{ secrets.BARECHECK_GITHUB_APP_TOKEN }}
+          lcov-file: "./coverage/lcov.info"
+          base-lcov-file: "./lcov.info"
+          minimum-ratio: 0 # Fails Github action once code coverage is decreasing
+          send-summary-comment: true
+          show-annotations: "warning" # Possible options warning|error
