--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,52 +9,55 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.base_ref }}
-      - name: Use Node.js v20.9.0
-        uses: actions/setup-node@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          node-version: v20.9.0
+          java-version: '8' # Set to your required JDK version
+          distribution: 'temurin'
 
-      - name: Install dependencies
-        run: yarn
+      - name: Build the project
+        run: ./gradlew build
 
-      - name: Run test coverage
-        run: yarn coverage
+      - name: Run tests with coverage
+        run: ./gradlew test jacocoTestReport
 
       - name: Upload code coverage for ref branch
         uses: actions/upload-artifact@v3
         with:
           name: ref-lcov.info
-          path: ./coverage/lcov.info
+          path: build/reports/jacoco/test/jacocoTestReport.csv # Path to your coverage report
 
   checks:
     runs-on: ubuntu-latest
     needs: base_branch_cov
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js v20.9.0
-        uses: actions/setup-node@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          node-version: v20.9.0
+          java-version: '17' # Set to your required JDK version
+          distribution: 'temurin'
 
       - name: Download code coverage report from base branch
         uses: actions/download-artifact@v3
         with:
           name: ref-lcov.info
 
-      - name: Install dependencies
-        run: yarn
+      - name: Build the project
+        run: ./gradlew build
 
-      - name: Run test coverage
-        run: yarn coverage
+      - name: Run tests with coverage
+        run: ./gradlew test jacocoTestReport
 
-      #  Compares two code coverage files and generates report as a comment
       - name: Generate Code Coverage report
         id: code-coverage
         uses: barecheck/code-coverage-action@v1
         with:
           barecheck-github-app-token: ${{ secrets.BARECHECK_GITHUB_APP_TOKEN }}
-          lcov-file: "./coverage/lcov.info"
-          base-lcov-file: "./lcov.info"
-          minimum-ratio: 0 # Fails Github action once code coverage is decreasing
+          lcov-file: "build/reports/jacoco/test/jacocoTestReport.csv" # Your coverage report
+          base-lcov-file: "ref-lcov.info" # Path to the downloaded coverage report
+          minimum-ratio: 0 # Set your desired minimum coverage ratio
           send-summary-comment: true
           show-annotations: "warning" # Possible options warning|error
