--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,7 @@ jobs:
         with:
           ref: ${{ github.base_ref }}
 
-      - name: Set up JDK 17
+      - name: Set up JDK 8
         uses: actions/setup-java@v3
         with:
           java-version: '8' # Set to your required JDK version
@@ -26,7 +26,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: ref-lcov.info
-          path: build/reports/jacoco/test/jacocoTestReport.csv # Path to your coverage report
+          path: build/reports/jacoco/test/jacocoTestReport.csv # Adjust path as necessary
 
   checks:
     runs-on: ubuntu-latest
@@ -34,10 +34,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up JDK 17
+      - name: Set up JDK 8
         uses: actions/setup-java@v3
         with:
-          java-version: '17' # Set to your required JDK version
+          java-version: '8' # Set to your required JDK version
           distribution: 'temurin'
 
       - name: Download code coverage report from base branch
