--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,8 +13,8 @@ jobs:
       - name: Set up JDK 8
         uses: actions/setup-java@v3
         with:
-          java-version: '8' # Set to your required JDK version
-          distribution: 'temurin'
+          java-version: '8'       # Specify Java 8
+          distribution: 'temurin' # Use Temurin distribution
 
       - name: Build the project
         run: ./gradlew build
@@ -26,7 +26,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: ref-lcov.info
-          path: build/reports/jacoco/test/jacocoTestReport.csv # Adjust path as necessary
+          path: build/reports/jacoco/test/jacocoTestReport.csv # Adjust if needed
 
   checks:
     runs-on: ubuntu-latest
@@ -37,8 +37,8 @@ jobs:
       - name: Set up JDK 8
         uses: actions/setup-java@v3
         with:
-          java-version: '8' # Set to your required JDK version
-          distribution: 'temurin'
+          java-version: '8'       # Specify Java 8
+          distribution: 'temurin' # Use Temurin distribution
 
       - name: Download code coverage report from base branch
         uses: actions/download-artifact@v3
@@ -55,9 +55,9 @@ jobs:
         id: code-coverage
         uses: barecheck/code-coverage-action@v1
         with:
-          barecheck-github-app-token: ${{ secrets.BARECHECK_GITHUB_APP_TOKEN }}
-          lcov-file: "build/reports/jacoco/test/jacocoTestReport.csv" # Your coverage report
-          base-lcov-file: "ref-lcov.info" # Path to the downloaded coverage report
-          minimum-ratio: 0 # Set your desired minimum coverage ratio
+          github-token: ${{ secrets.GITHUB_TOKEN }} # Use the default GitHub token
+          lcov-file: "build/reports/jacoco/test/jacocoTestReport.csv"
+          base-lcov-file: "ref-lcov.info"
+          minimum-ratio: 0
           send-summary-comment: true
-          show-annotations: "warning" # Possible options warning|error
+          show-annotations: "warning"
