--- a/build.gradle
+++ b/build.gradle
@@ -172,6 +172,9 @@ def clientType = project.findProperty("compatibilityClient").toBoolean()
         : "tauri"
 
 dependencies {
+  implementation group: 'org.openjfx', name: 'javafx-base', version: '11.0.2'
+  implementation group: 'org.openjfx', name: 'javafx-controls', version: '11.0.2'
+  implementation group: 'org.openjfx', name: 'javafx-fxml', version: '11.0.2'
   testImplementation group: 'junit', name: 'junit', version: '4.13.2'
 
   // The Battlecode engine.
