updated the error correction

--- a/build.gradle
+++ b/build.gradle
@@ -198,7 +198,7 @@ jacocoTestReport {
   dependsOn test // ensures tests are run before generating the report
   reports {
     xml.enabled true
-    csv.enabled false
+    csv.enabled true
     html.enabled true // generates HTML report
   }
 }
