--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,8 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: 1.8  # Set the JDK version (match the one used in your project)
-          distribution: 'adoptopenjdk'  # Add the distribution parameter (you can also use 'zulu', 'amazon', etc.)
+          distribution: 'temurin'  # Use the 'temurin' distribution (Adoptium)
+        # Add the distribution parameter (you can also use 'zulu', 'amazon', etc.)
 
       - name: Set up Gradle wrapper
         uses: gradle/wrapper-validation-action@v1  # Ensures the correct Gradle wrapper is used
