--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,11 @@ jobs:
           java-version: 1.8  # Set the JDK version (match the one used in your project)
           distribution: 'adoptopenjdk'  # Add the distribution parameter (you can also use 'zulu', 'amazon', etc.)
 
-      - name: Set up Gradle wrapper
-        uses: gradle/wrapper-validation-action@v1  # Ensures the correct Gradle wrapper is used
+      - name: Set up JDK 8
+        uses: actions/setup-java@v2
+        with:
+          java-version: 1.8  # Set the JDK version (match the one used in your project)
+          distribution: 'temurin'  # Use the 'temurin' distribution (Adoptium)
 
       - name: Build with Gradle
         run: ./gradlew build  # Builds the project
