passing test cases and minor changes for PathFind

--- a/build.gradle
+++ b/build.gradle
@@ -176,6 +176,7 @@ def clientType = project.findProperty("compatibilityClient").toBoolean()
 
 dependencies {
   testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+  testImplementation 'org.mockito:mockito-core:4.2.0'
 
   // The Battlecode engine.
   implementation group: 'org.battlecode', name: 'battlecode24', version: versions.battlecode
