--- a/build.gradle
+++ b/build.gradle
@@ -180,6 +180,9 @@ dependencies {
 
   // The Battlecode engine.
   implementation group: 'org.battlecode', name: 'battlecode24', version: versions.battlecode
+  testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+  testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+  testImplementation 'org.testng:testng:7.1.0'
 
   // The Battlecode client.
   client group: 'org.battlecode', name: clientName + clientType, version: versions.battlecode
